apps/test-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api
  namespace: test-api
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: test-api
